tests/paczka1/small_fuzzy/87112585.err
Error in line 7: 9QM0h A215 151,6
Error in line 12: XqTsmx A829 53,9
